objects/Account.object
<CustomObject>
    <fields>
        <fullName>Payment_Portal_Information__c</fullName>
        <label>Payment Portal Information</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Ariba</fullName>
                </value>
                <value>
                    <fullName>Coupa</fullName>
                </value>
                <value>
                    <fullName>eInvoicing</fullName>
                </value>
                <value>
                    <fullName>FIS Integrated Payables</fullName>
                </value>
                <value>
                    <fullName>Global Procurement Enel</fullName>
                </value>
                <value>
                    <fullName>iSupplier</fullName>
                </value>
                <value>
                    <fullName>Paymode-X</fullName>
                </value>
                <value>
                    <fullName>Tungsten Network</fullName>
                </value>
                <value>
                    <fullName>uSupplier</fullName>
                </value>
                <value>
                    <fullName>Oracle</fullName>
                </value>
                <value>
                    <fullName>Company Specific Portal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_SI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Professional_Services_Hours_Consumed__c</fullName>
        <label>Professional Services Hours Consumed</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AMER</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>LACA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewal Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SAP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field created per US-0031500 to preserve the migrated data from Qualibrate records.</description>
        <label>SAP (Qualibrate)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__AssetQuantitiesCombined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option to combine quantities of multiple assets for the same product into one line when renewal quote is generated.</description>
        <inlineHelpText>Option to combine quantities of multiple assets for the same product into one line when renewal quote is generated.</inlineHelpText>
        <label>Combine Asset Quantities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CoTermedContractsCombined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that controls whether assets and subscriptions from multiple co-teremed contracts are rolled up together. By default, each co-termed contract generates a separate group on renewal quote.</description>
        <inlineHelpText>Enable to combine assets and subscriptions from multiple co-termed contracts. By default, each co-termed contract generates a separate group on renewal quote.</inlineHelpText>
        <label>Combine Co-Termed Contracts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CoTerminationEvent__c</fullName>
        <description>Determines when contracts are co-terminated.</description>
        <inlineHelpText>Determines when contracts are co-terminated.</inlineHelpText>
        <label>Co-Termination Event</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SBQQ__ContractCoTermination__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Add-on</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ContractCoTermination__c</fullName>
        <description>Determines how service and subscription contracts for this customer are co-terminated.</description>
        <inlineHelpText>Determines how service and subscription contracts for this customer are co-terminated.</inlineHelpText>
        <label>Contract Co-Termination</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Never</fullName>
                    <default>true</default>
                    <label>Never</label>
                </value>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>Prompt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Default opportunity for this account used by an e-Commerce module to obtain the customer&apos;s price book and associate with &quot;shopping cart&quot; quotes.</description>
        <inlineHelpText>Default opportunity for this account used by an e-Commerce module to obtain the customer&apos;s price book and associate with &quot;shopping cart&quot; quotes.</inlineHelpText>
        <label>Default Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>WebAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__IgnoreParentContractedPrices__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select if contracted prices should not be inherited from the parent account.</description>
        <inlineHelpText>Select if contracted prices should not be inherited from the parent account.</inlineHelpText>
        <label>Ignore Parent Contracted Prices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__PreserveBundle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select to maintain bundle hierarchy on renewal quotes and amendments</description>
        <inlineHelpText>Select checkbox to maintain bundle hierarchy on renewal quotes and amendments.</inlineHelpText>
        <label>Preserve Bundle Structure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__PriceHoldEnd__c</fullName>
        <description>End date for any price hold that may be in effect.</description>
        <inlineHelpText>Enter date until which the prices must be held.</inlineHelpText>
        <label>Price Hold End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalModel__c</fullName>
        <description>The option to distinguish between Subscription or Asset based renewal.</description>
        <inlineHelpText>Choose Asset Based to make renewals based off of an account&apos;s Assets or choose Subscription based to makes renewals based off of subscriptions created from a quote.</inlineHelpText>
        <label>Renewal Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asset Based</fullName>
                </value>
                <value>
                    <fullName>Contract Based</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalPricingMethod__c</fullName>
        <description>Method for pricing products on renewal.</description>
        <inlineHelpText>Use &quot;Same&quot; to keep the same price paid last time. Use &quot;List&quot; to use current list price. Use &quot;Uplift&quot; to use the price paid last time plus some uplift.</inlineHelpText>
        <label>Renewal Pricing Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Same</fullName>
                    <default>true</default>
                    <label>Same</label>
                </value>
                <value>
                    <fullName>List</fullName>
                </value>
                <value>
                    <fullName>Uplift</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__TaxExempt__c</fullName>
        <description>Selected if this account has active certificates</description>
        <inlineHelpText>Selected if this account has active certificates</inlineHelpText>
        <label>Tax-Exempt</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDC_Account_Number__c</fullName>
        <inlineHelpText>This is the account number of the customer with salesforce.com</inlineHelpText>
        <label>SFDC Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIGSTR__R_Score__c</fullName>
        <label>R Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIGSTR__SigstrSync__c</fullName>
        <defaultValue>true</defaultValue>
        <label>SigstrSync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SI_Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SI Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (SI Primary Contact)</relationshipLabel>
        <relationshipName>PrimarySI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SIs_Involved__c</fullName>
        <label>SIs Involved</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Engineer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Engineer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salesforce_AE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesforce AE</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Salesforce AE)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salesforce_AOV_Account__c</fullName>
        <label>Salesforce AOV Account</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Salesforce_AOV__c</fullName>
        <formula>CASE(AOV_Band__c, 
&quot;$25M+&quot;, 25000000,
&quot;$10M-25M&quot;, 17500000,
&quot;$5M-10M&quot;, 7500000,
&quot;$1M-5M&quot;, 2500000,
&quot;$600k-1M&quot;, 800000,
&quot;$200k-600k&quot;, 400000,
0
)</formula>
        <label>Salesforce AOV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Salesforce_AVP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesforce AVP</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Salesforce AVP)</relationshipLabel>
        <relationshipName>SalesforceAVP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salesforce_CSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesforce CSM</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Salesforce CSM)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salesforce_ECS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesforce ECS</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Salesforce ECS)</relationshipLabel>
        <relationshipName>SalesforceECS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salesforce_Engaged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Salesforce Engaged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salesforce_PA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesforce PA</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Salesforce PA)</relationshipLabel>
        <relationshipName>SalesforcePA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salesforce_Platform_AE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesforce Platform AE</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Salesforce Platform AE)</relationshipLabel>
        <relationshipName>Accounts_Salesforce_Platform_AE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salesforce_RVP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesforce RVP</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Salesforce RVP)</relationshipLabel>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <description>A distinct section of industry that is selected on the Account</description>
        <label>Sector</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slintel_Company_City__c</fullName>
        <label>Slintel Company City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slintel_Company_Country__c</fullName>
        <label>Slintel Company Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slintel_Company_Description__c</fullName>
        <label>Slintel Company Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Slintel_Company_EBITDA__c</fullName>
        <label>Slintel Company EBITDA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slintel_Company_Facebook_Page__c</fullName>
        <label>Slintel Company Facebook Page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Slintel_Company_Fiscal_Year__c</fullName>
        <label>Slintel Company Fiscal Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slintel_Company_Funding__c</fullName>
        <label>Slintel Company Funding</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slintel_Company_Id__c</fullName>
        <label>Slintel Company Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slintel_Company_Industry__c</fullName>
        <label>Slintel Company Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slintel_Company_LinkedIn_Page__c</fullName>
        <label>Slintel Company LinkedIn Page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Slintel_Company_Name__c</fullName>
        <label>Slintel Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slintel_Company_Phone_Number__c</fullName>
        <label>Slintel Company Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slintel_Company_Product_And_Service__c</fullName>
        <label>Slintel Company Product And Service</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Slintel_Company_Revenue__c</fullName>
        <label>Slintel Company Revenue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slintel_Company_Size__c</fullName>
        <label>Slintel Company Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slintel_Company_State__c</fullName>
        <label>Slintel Company State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slintel_Company_Technologies__c</fullName>
        <label>Slintel Company Technologies</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Slintel_Company_Twitter_Page__c</fullName>
        <label>Slintel Company Twitter Page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Slintel_Company_Type__c</fullName>
        <label>Slintel Company Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slintel_Created_By__c</fullName>
        <label>Slintel Created By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slintel_Sector__c</fullName>
        <label>Slintel Company Sector</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Marketing Qualification</fullName>
                </value>
                <value>
                    <fullName>Discovery</fullName>
                </value>
                <value>
                    <fullName>Solution Alignment</fullName>
                </value>
                <value>
                    <fullName>Solution Validation</fullName>
                </value>
                <value>
                    <fullName>Formal Proposal</fullName>
                </value>
                <value>
                    <fullName>Negotiation</fullName>
                </value>
                <value>
                    <fullName>Signed Contract Received</fullName>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
                <value>
                    <fullName>Fully Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sum_of_Probability__c</fullName>
        <label>Sum of Probability%</label>
        <summarizedField>Opportunity.Probability</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TAM__c</fullName>
        <label>TAM</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tech_Architect__c</fullName>
        <label>Tech Architect</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Country__c</fullName>
        <label>Territory Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Name__c</fullName>
        <label>Territory Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_State__c</fullName>
        <label>Territory State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__Account_NPS__c</fullName>
        <description>Account NPS for the latest Onboarding or Relationship questionnaire wave.</description>
        <inlineHelpText>Account NPS for the latest Onboarding or Relationship questionnaire wave.</inlineHelpText>
        <label>TopBox - Account NPS</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__Account_TopBox_X_Ray__c</fullName>
        <label>TopBox Account X-Ray</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__CSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TopBox CSM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CSM_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__Invitation_Guidelines_Met__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the account met the Invitation Guidelines for the latest Onboarding or Relationship questionnaire wave.</description>
        <inlineHelpText>Checked if the account met the Invitation Guidelines for the latest Onboarding or Relationship questionnaire wave.</inlineHelpText>
        <label>TopBox - Invitation Guidelines Met</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__NPS_Trend__c</fullName>
        <description>Account NPS Trend (No Trend, Declined, Improved) across all Onboarding and Relationship questionnaire Waves.</description>
        <inlineHelpText>Account NPS Trend (No Trend, Declined, Improved) across all Onboarding and Relationship questionnaire Waves.</inlineHelpText>
        <label>TopBox - NPS Trend</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__Response_Guidelines_Met__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the account met the Response Guidelines for the latest Onboarding or Relationship questionnaire wave.</description>
        <inlineHelpText>Checked if the account met the Response Guidelines for the latest Onboarding or Relationship questionnaire wave.</inlineHelpText>
        <label>TopBox - Response Guidelines Met</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__Response_Rate__c</fullName>
        <description>Account Response Rate for the latest Onboarding or Relationship questionnaire wave.</description>
        <inlineHelpText>Account Response Rate for the latest Onboarding or Relationship questionnaire wave.</inlineHelpText>
        <label>TopBox - Account Response Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__Test_DateTime__c</fullName>
        <label>Test DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__Test_Date__c</fullName>
        <label>Test Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__Test_Tier__c</fullName>
        <label>Test Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Tier 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TopBoxWG__Tier__c</fullName>
        <label>Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Strategic</fullName>
                </value>
                <value>
                    <fullName>Growth</fullName>
                </value>
                <value>
                    <fullName>Valued</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_ARR__c</fullName>
        <label>TopBox ARR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Account_Age__c</fullName>
        <description>Account Age - number of months since Initial Go-Live Date</description>
        <formula>IF(
				ISBLANK(TopBoxWG__TopBox_Initial_Go_Live_Date__c),
				0,
				IF( 
								CEILING( ((TODAY() - TopBoxWG__TopBox_Initial_Go_Live_Date__c) / 365 * 12) - 1 ) &lt;= 0,
								0,
								CEILING( ((TODAY() - TopBoxWG__TopBox_Initial_Go_Live_Date__c) / 365 * 12) - 1 )
						)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Account Age - number of months since Initial Go-Live Date</inlineHelpText>
        <label>TopBox - Account Age (months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Account_Health_Risk__c</fullName>
        <formula>IF(
AND(
TopBoxWG__TopBox_Engagement_Rate__c &gt;= 0.50 , 
TopBoxWG__TopBox_Value_Net_Score__c &gt;= 0
),
&quot;Green: Expansion Opportunity&quot;,
IF(
AND(
TopBoxWG__TopBox_Engagement_Rate__c &gt;= 0.50 ,
TopBoxWG__TopBox_Value_Net_Score__c &lt; 0
),
&quot;Yellow: Potential to Churn&quot;,
IF(
AND(
TopBoxWG__TopBox_Engagement_Rate__c &lt; 0.50 ,
TopBoxWG__TopBox_Value_Net_Score__c &gt;= 0
),
&quot;Yellow: Potential to Lose to a Competitor&quot;,
IF(
AND(
TopBoxWG__TopBox_Engagement_Rate__c &lt; 0.50 ,
TopBoxWG__TopBox_Value_Net_Score__c &lt; 0
),
&quot;Red: Potential to Churn Without Notice&quot;,
NULL))))</formula>
        <label>TopBox - Account Health Risk</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Account_Renewal_Date__c</fullName>
        <description>Latest scheduled Account Renewal date - for informational purposes.</description>
        <inlineHelpText>Latest scheduled Account Renewal date - for informational purposes.</inlineHelpText>
        <label>TopBox - Account Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_CSM_Email__c</fullName>
        <formula>TopBoxWG__CSM__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TopBox CSM Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_CSM_Name__c</fullName>
        <formula>TopBoxWG__CSM__r.FirstName +&quot; &quot;+ TopBoxWG__CSM__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TopBox CSM Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Engagement_Rate__c</fullName>
        <description>Engagement Rate = % of Response Guidelines Met is multiplied by the overall Response Rate for the Account</description>
        <inlineHelpText>Engagement Rate = % of Response Guidelines Met is multiplied by the overall Response Rate for the Account</inlineHelpText>
        <label>TopBox - Engagement Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Initial_Go_Live_Date__c</fullName>
        <description>Required field to enable Onboarding or Relationship questionnaire scheduling.
The Onboarding questionnaire will be skipped if the Initial Go-Live Date is populated with a date that is more than 2 months old.</description>
        <inlineHelpText>Required field to enable Onboarding or Relationship questionnaire scheduling.
The Onboarding questionnaire will be skipped if the Initial Go-Live Date is populated with a date that is more than 2 months old.</inlineHelpText>
        <label>TopBox - Initial Go-Live  Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Initial_Send_Date__c</fullName>
        <description>Date on which the Initial Relationship questionnaire is scheduled to be sent out to the selected contacts (Contact: Send Onboarding/Relationship = True).</description>
        <inlineHelpText>Date on which the Initial Relationship questionnaire is scheduled to be sent out to the selected contacts (Contact: Send Onboarding/Relationship = True).</inlineHelpText>
        <label>TopBox - Initial Relationship Send Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Invitation_Guidelines_Met_Percent__c</fullName>
        <label>TopBox - Invitation Guidelines Met (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Latest_Wave_End_Date__c</fullName>
        <description>End date of latest Onboarding or Relationship questionnaire wave in which the account was included.</description>
        <inlineHelpText>End date of latest Onboarding or Relationship questionnaire wave in which the account was included.</inlineHelpText>
        <label>TopBox - Latest Wave End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Latest_Wave_Start_Date__c</fullName>
        <label>TopBox - Latest Wave Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Next_Questionnaire_Month__c</fullName>
        <description>Override automatically scheduled Relationship send dates that are still in the future.</description>
        <inlineHelpText>Override automatically scheduled Relationship send dates that are still in the future.</inlineHelpText>
        <label>TopBox - Set Relationship Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Next_Questionnaire_Send_Date__c</fullName>
        <description>Date on which the next questionnaire is scheduled to be sent out to the selected contacts - for informational purposes. Once the upcoming Onboarding/Initial/Renewal Send Date has passed, the field automatically updates to reflect the next send date.</description>
        <formula>IF(
				TopBoxWG__TopBox_Onboarding_Send_Date__c &gt; NOW(),
				TopBoxWG__TopBox_Onboarding_Send_Date__c,
				IF(
				    TopBoxWG__TopBox_Initial_Send_Date__c &gt; NOW(),
								TopBoxWG__TopBox_Initial_Send_Date__c,
				    IF(
				        TopBoxWG__TopBox_Next_Renewal_Send_Date__c &gt; NOW(),
								    TopBoxWG__TopBox_Next_Renewal_Send_Date__c,
								    TopBoxWG__TopBox_Ongoing_Relationship_Send_Date__c 
				    )
				)
)</formula>
        <inlineHelpText>Date on which the next questionnaire is scheduled to be sent out to the selected contacts - for informational purposes. Once the upcoming Onboarding/Initial/Renewal Send Date has passed, the field automatically updates to reflect the next send date.</inlineHelpText>
        <label>TopBox - Next Questionnaire Send Date</label>
        <type>DateTime</type>
    </fields>
</CustomObject>